--- a/examples/Example___coefficients_recursive.ipynb
+++ b/examples/Example___coefficients_recursive.ipynb
@@ -20,12 +20,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
-        "id": "v1-Xts03y-no"
+        "id": "v1-Xts03y-no",
+        "outputId": "2a1e21b5-4938-4b5b-ca99-f2da9deb2b58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting clifford\n",
+            "  Downloading clifford-1.4.0-py3-none-any.whl (159 kB)\n",
+            "\u001b[K     |████████████████████████████████| 159 kB 5.3 MB/s \n",
+            "\u001b[?25hCollecting sparse\n",
+            "  Downloading sparse-0.13.0-py2.py3-none-any.whl (77 kB)\n",
+            "\u001b[K     |████████████████████████████████| 77 kB 5.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from clifford) (1.4.1)\n",
+            "Requirement already satisfied: numba>0.46 in /usr/local/lib/python3.7/dist-packages (from clifford) (0.51.2)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.7/dist-packages (from clifford) (3.1.0)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from clifford) (1.21.5)\n",
+            "Requirement already satisfied: llvmlite<0.35,>=0.34.0.dev0 in /usr/local/lib/python3.7/dist-packages (from numba>0.46->clifford) (0.34.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from numba>0.46->clifford) (57.4.0)\n",
+            "Requirement already satisfied: cached-property in /usr/local/lib/python3.7/dist-packages (from h5py->clifford) (1.5.2)\n",
+            "Installing collected packages: sparse, clifford\n",
+            "Successfully installed clifford-1.4.0 sparse-0.13.0\n",
+            "Collecting galgebra\n",
+            "  Downloading galgebra-0.5.0-py3-none-any.whl (95 kB)\n",
+            "\u001b[K     |████████████████████████████████| 95 kB 2.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: sympy in /usr/local/lib/python3.7/dist-packages (from galgebra) (1.7.1)\n",
+            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.7/dist-packages (from sympy->galgebra) (1.2.1)\n",
+            "Installing collected packages: galgebra\n",
+            "Successfully installed galgebra-0.5.0\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Install and import `clifford` and `galgebra` packages\n",
         "!pip install clifford\n",
@@ -37,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "cellView": "form",
         "id": "5CHYUDKZrfff"
@@ -56,14 +89,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "cellView": "form",
-        "id": "ZlluRKWdfrq8"
+        "id": "ZlluRKWdfrq8",
+        "outputId": "21de0712-e314-43ef-f9bc-9dc20097bfac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2022-03-12 13:53:32--  https://raw.githubusercontent.com/kamranuz/clifford_det/main/coefficients_recursive.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 974 [text/plain]\n",
+            "Saving to: ‘coefficients_recursive.py’\n",
+            "\n",
+            "\r          coefficie   0%[                    ]       0  --.-KB/s               \rcoefficients_recurs 100%[===================>]     974  --.-KB/s    in 0s      \n",
+            "\n",
+            "2022-03-12 13:53:32 (52.3 MB/s) - ‘coefficients_recursive.py’ saved [974/974]\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "#@title Import our formulas for the characteristic polynomial coefficients in the case $n=5$\n",
+        "#@title Import recursive formulas for the characteristic polynomial coefficients\n",
         "!wget https://raw.githubusercontent.com/kamranuz/clifford_det/main/coefficients_recursive.py\n",
         "\n",
         "import coefficients_recursive as recur"
@@ -80,23 +135,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Rs7T_sFP5Lq",
-        "outputId": "7421705c-f90e-4f3a-87f8-f34e88fa0f92"
+        "outputId": "c694807f-52bb-4c11-b568-24698d866c48"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "U = 2 + (4^e1) - (4^e2) - (2^e3) + (2^e4) - (5^e5) + (2^e12) + (1^e13) + (3^e14) - (2^e15) - (5^e23) - (4^e24) - (5^e25) - (3^e34) + (1^e35) - (4^e45) - (3^e123) + (4^e124) - (3^e125) - (2^e134) - (5^e145) + (5^e234) + (5^e235) + (3^e345) - (5^e1234) - (5^e1235) - (2^e1245) - (4^e1345) + (3^e2345) + (3^e12345)\n",
-            "CPU times: user 3.83 ms, sys: 0 ns, total: 3.83 ms\n",
-            "Wall time: 7.73 ms\n"
+            "U = -2 - (1^e1) - (1^e2) - (3^e3) - (3^e4) - (4^e5) - (5^e12) - (3^e13) - (1^e14) + (4^e15) + (4^e23) - (2^e24) - (4^e25) - (4^e34) - (1^e35) - (5^e45) - (4^e123) + (2^e124) + (1^e125) + (1^e134) - (1^e145) + (1^e234) - (4^e235) - (4^e345) - (5^e1234) - (4^e1235) - (2^e1245) - (5^e2345) - (4^e12345)\n",
+            "CPU times: user 4.43 ms, sys: 279 µs, total: 4.71 ms\n",
+            "Wall time: 8.54 ms\n"
           ]
         }
       ],
@@ -129,21 +184,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nZ9ivUM-P5Ls",
-        "outputId": "1ba38aa3-20bc-471e-c99b-8e0976a2fa9d"
+        "outputId": "48b454ae-008a-45f1-e4fd-196d336bb960"
       },
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/numba/np/ufunc/parallel.py:363: NumbaWarning: The TBB threading layer requires TBB version 2019.5 or later i.e., TBB_INTERFACE_VERSION >= 11005. Found TBB_INTERFACE_VERSION = 9107. The TBB threading layer is disabled.\n",
+            "  warnings.warn(problem)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 2.7 ms, sys: 0 ns, total: 2.7 ms\n",
-            "Wall time: 8.5 ms\n"
+            "CPU times: user 2.82 s, sys: 140 ms, total: 2.96 s\n",
+            "Wall time: 4.24 s\n"
           ]
         }
       ],
@@ -171,20 +234,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "I5AR6mICWEfz",
-        "outputId": "a61eef96-1f7e-4c9b-e792-5a431e4ca46a"
+        "outputId": "6b9ff5c9-4cdd-4917-fffd-879f619f7023"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Characteristic polynomial coefficients:  [16.0, -428.0, 5296.0, 140794.0, 1159344.0, -33700972.0, -421185776.0, -2395563873.0]\n"
+            "Characteristic polynomial coefficients:  [-16.0, -364.0, -9520.0, -119182.0, -1084464.0, -29322716.0, -10753040.0, -2192269497.0]\n"
           ]
         }
       ],
@@ -203,21 +266,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ty9YwG21P5Lv",
-        "outputId": "866cd40f-a8c2-4ebb-ae40-c95df2ca0580"
+        "outputId": "723ca71f-feca-44c6-f7e8-fdc5a6469f22"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 1.67 ms, sys: 0 ns, total: 1.67 ms\n",
-            "Wall time: 6.12 ms\n"
+            "CPU times: user 166 µs, sys: 17 µs, total: 183 µs\n",
+            "Wall time: 192 µs\n"
           ]
         }
       ],
@@ -239,28 +302,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "tXCFBnpqWcKS",
-        "outputId": "bc40fd52-a7e6-46ae-dbda-4c93fbbde130"
+        "outputId": "5163b155-8980-4c37-add2-2ce9161660f3"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "'U * U_inv = 1.0'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ],
       "source": [
@@ -278,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "Xy5VVGzhqRpz",
         "cellView": "form"
@@ -305,13 +368,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "lXOqkpXzs-Qp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e8e6eaca-9a0a-47e6-87d1-91e86497e3c6"
+        "outputId": "0bc77089-7b86-4093-f686-9be9991b8efd"
       },
       "outputs": [
         {
@@ -319,7 +382,7 @@
           "name": "stdout",
           "text": [
             "CPU times: user 6 µs, sys: 1 µs, total: 7 µs\n",
-            "Wall time: 11.9 µs\n"
+            "Wall time: 11.2 µs\n"
           ]
         }
       ],
@@ -333,21 +396,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QHZIUJxbsbP3",
-        "outputId": "a0581dba-2369-4fe0-a84c-9528e08cbb7f"
+        "outputId": "d6bd3491-f533-4a6f-ee31-648e8baf55ad"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 1.13 ms, sys: 125 µs, total: 1.25 ms\n",
-            "Wall time: 2.34 ms\n"
+            "CPU times: user 1.02 ms, sys: 1 µs, total: 1.03 ms\n",
+            "Wall time: 1.04 ms\n"
           ]
         }
       ],
@@ -360,22 +423,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1RHYi6DXuxul",
-        "outputId": "d062a385-38c0-43fa-bf84-e9a967eff19d"
+        "id": "1RHYi6DXuxul"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CPU times: user 23.5 s, sys: 100 ms, total: 23.6 s\n",
-            "Wall time: 39.3 s\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%%time\n",
         "c2 = next(coefs_generator)"
@@ -393,9 +443,9 @@
           "height": 56
         },
         "id": "TCrJzDgkhvBV",
-        "outputId": "ca79b84a-9dfa-4ea0-e9e9-555a837ba5ea"
+        "outputId": "6d604cc6-01d7-48f6-f1d7-b5265f333f19"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,11 +457,11 @@
         {
           "output_type": "display_data",
           "data": {
-            "text/html": [
-              "<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/latest.js?config=default'></script>"
-            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/latest.js?config=default'></script>"
             ]
           },
           "metadata": {}
@@ -419,13 +469,13 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/latex": "$\\displaystyle \\left( 8.0 v,\\right)$",
             "text/plain": [
               "(8.0⋅v,)"
-            ]
+            ],
+            "text/latex": "$\\displaystyle \\left( 8.0 v,\\right)$"
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 14
         }
       ]
     },
@@ -436,59 +486,10 @@
         "c2,"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "id": "Brpc0vqHhr9W",
-        "outputId": "4ecd451d-5bda-4c76-c24f-8ba808e671a9"
+        "id": "Brpc0vqHhr9W"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "C_2:\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/latest.js?config=default'></script>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/latex": "$\\displaystyle \\left( - 28.0 v^{2} + 4.0 \\left(v^{1}\\right)^{2} - 4.0 \\left(v^{12}\\right)^{2} - 4.0 \\left(v^{123}\\right)^{2} + 4.0 \\left(v^{1234}\\right)^{2} + 4.0 \\left(v^{12345}\\right)^{2} + 4.0 \\left(v^{1235}\\right)^{2} - 4.0 \\left(v^{124}\\right)^{2} + 4.0 \\left(v^{1245}\\right)^{2} - 4.0 \\left(v^{125}\\right)^{2} - 4.0 \\left(v^{13}\\right)^{2} - 4.0 \\left(v^{134}\\right)^{2} + 4.0 \\left(v^{1345}\\right)^{2} - 4.0 \\left(v^{135}\\right)^{2} - 4.0 \\left(v^{14}\\right)^{2} - 4.0 \\left(v^{145}\\right)^{2} - 4.0 \\left(v^{15}\\right)^{2} + 4.0 \\left(v^{2}\\right)^{2} - 4.0 \\left(v^{23}\\right)^{2} - 4.0 \\left(v^{234}\\right)^{2} + 4.0 \\left(v^{2345}\\right)^{2} - 4.0 \\left(v^{235}\\right)^{2} - 4.0 \\left(v^{24}\\right)^{2} - 4.0 \\left(v^{245}\\right)^{2} - 4.0 \\left(v^{25}\\right)^{2} + 4.0 \\left(v^{3}\\right)^{2} - 4.0 \\left(v^{34}\\right)^{2} - 4.0 \\left(v^{345}\\right)^{2} - 4.0 \\left(v^{35}\\right)^{2} + 4.0 \\left(v^{4}\\right)^{2} - 4.0 \\left(v^{45}\\right)^{2} + 4.0 \\left(v^{5}\\right)^{2},\\right)$",
-            "text/plain": [
-              "⎛        2         2          2           2            2             2        \n",
-              "⎝- 28.0⋅v  + 4.0⋅v¹  - 4.0⋅v¹²  - 4.0⋅v¹²³  + 4.0⋅v¹²³⁴  + 4.0⋅v¹²³⁴⁵  + 4.0⋅v\n",
-              "\n",
-              "    2           2            2           2          2           2            2\n",
-              "¹²³⁵  - 4.0⋅v¹²⁴  + 4.0⋅v¹²⁴⁵  - 4.0⋅v¹²⁵  - 4.0⋅v¹³  - 4.0⋅v¹³⁴  + 4.0⋅v¹³⁴⁵ \n",
-              "\n",
-              "           2          2           2          2         2          2           \n",
-              " - 4.0⋅v¹³⁵  - 4.0⋅v¹⁴  - 4.0⋅v¹⁴⁵  - 4.0⋅v¹⁵  + 4.0⋅v²  - 4.0⋅v²³  - 4.0⋅v²³⁴\n",
-              "\n",
-              "2            2           2          2           2          2         2        \n",
-              "  + 4.0⋅v²³⁴⁵  - 4.0⋅v²³⁵  - 4.0⋅v²⁴  - 4.0⋅v²⁴⁵  - 4.0⋅v²⁵  + 4.0⋅v³  - 4.0⋅v\n",
-              "\n",
-              "  2           2          2         2          2         2 ⎞\n",
-              "³⁴  - 4.0⋅v³⁴⁵  - 4.0⋅v³⁵  + 4.0⋅v⁴  - 4.0⋅v⁴⁵  + 4.0⋅v⁵ ,⎠"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
-        }
-      ]
+      "outputs": []
     }
   ],
   "metadata": {
