--- a/examples/Example___coefficients_recursive.ipynb
+++ b/examples/Example___coefficients_recursive.ipynb
@@ -20,11 +20,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 15,
       "metadata": {
         "cellView": "form",
         "id": "v1-Xts03y-no",
-        "outputId": "2a1e21b5-4938-4b5b-ca99-f2da9deb2b58",
+        "outputId": "559cbb9c-2b8a-4f42-cb9c-f4cce244fdc8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -34,28 +34,18 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting clifford\n",
-            "  Downloading clifford-1.4.0-py3-none-any.whl (159 kB)\n",
-            "\u001b[K     |████████████████████████████████| 159 kB 5.3 MB/s \n",
-            "\u001b[?25hCollecting sparse\n",
-            "  Downloading sparse-0.13.0-py2.py3-none-any.whl (77 kB)\n",
-            "\u001b[K     |████████████████████████████████| 77 kB 5.1 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from clifford) (1.4.1)\n",
-            "Requirement already satisfied: numba>0.46 in /usr/local/lib/python3.7/dist-packages (from clifford) (0.51.2)\n",
-            "Requirement already satisfied: h5py in /usr/local/lib/python3.7/dist-packages (from clifford) (3.1.0)\n",
+            "Requirement already satisfied: clifford in /usr/local/lib/python3.7/dist-packages (1.4.0)\n",
             "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from clifford) (1.21.5)\n",
+            "Requirement already satisfied: numba>0.46 in /usr/local/lib/python3.7/dist-packages (from clifford) (0.51.2)\n",
+            "Requirement already satisfied: sparse in /usr/local/lib/python3.7/dist-packages (from clifford) (0.13.0)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.7/dist-packages (from clifford) (3.1.0)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from clifford) (1.4.1)\n",
             "Requirement already satisfied: llvmlite<0.35,>=0.34.0.dev0 in /usr/local/lib/python3.7/dist-packages (from numba>0.46->clifford) (0.34.0)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from numba>0.46->clifford) (57.4.0)\n",
             "Requirement already satisfied: cached-property in /usr/local/lib/python3.7/dist-packages (from h5py->clifford) (1.5.2)\n",
-            "Installing collected packages: sparse, clifford\n",
-            "Successfully installed clifford-1.4.0 sparse-0.13.0\n",
-            "Collecting galgebra\n",
-            "  Downloading galgebra-0.5.0-py3-none-any.whl (95 kB)\n",
-            "\u001b[K     |████████████████████████████████| 95 kB 2.3 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: sympy in /usr/local/lib/python3.7/dist-packages (from galgebra) (1.7.1)\n",
-            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.7/dist-packages (from sympy->galgebra) (1.2.1)\n",
-            "Installing collected packages: galgebra\n",
-            "Successfully installed galgebra-0.5.0\n"
+            "Requirement already satisfied: galgebra in /usr/local/lib/python3.7/dist-packages (0.5.0)\n",
+            "Requirement already satisfied: sympy in /usr/local/lib/python3.7/dist-packages (from galgebra) (1.7.1)\n",
+            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.7/dist-packages (from sympy->galgebra) (1.2.1)\n"
           ]
         }
       ],
@@ -70,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 16,
       "metadata": {
         "cellView": "form",
         "id": "5CHYUDKZrfff"
@@ -89,11 +79,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 17,
       "metadata": {
         "cellView": "form",
         "id": "ZlluRKWdfrq8",
-        "outputId": "21de0712-e314-43ef-f9bc-9dc20097bfac",
+        "outputId": "062ecc3e-7299-457b-9b99-e87b003d1035",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -103,16 +93,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-03-12 13:53:32--  https://raw.githubusercontent.com/kamranuz/clifford_det/main/coefficients_recursive.py\n",
+            "--2022-03-12 13:56:39--  https://raw.githubusercontent.com/kamranuz/clifford_det/main/coefficients_recursive.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 974 [text/plain]\n",
-            "Saving to: ‘coefficients_recursive.py’\n",
+            "Saving to: ‘coefficients_recursive.py.1’\n",
             "\n",
             "\r          coefficie   0%[                    ]       0  --.-KB/s               \rcoefficients_recurs 100%[===================>]     974  --.-KB/s    in 0s      \n",
             "\n",
-            "2022-03-12 13:53:32 (52.3 MB/s) - ‘coefficients_recursive.py’ saved [974/974]\n",
+            "2022-03-12 13:56:39 (41.2 MB/s) - ‘coefficients_recursive.py.1’ saved [974/974]\n",
             "\n"
           ]
         }
@@ -135,23 +125,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 18,
       "metadata": {
         "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Rs7T_sFP5Lq",
-        "outputId": "c694807f-52bb-4c11-b568-24698d866c48"
+        "outputId": "df942896-aefe-46ec-a585-ef90a95eda4e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "U = -2 - (1^e1) - (1^e2) - (3^e3) - (3^e4) - (4^e5) - (5^e12) - (3^e13) - (1^e14) + (4^e15) + (4^e23) - (2^e24) - (4^e25) - (4^e34) - (1^e35) - (5^e45) - (4^e123) + (2^e124) + (1^e125) + (1^e134) - (1^e145) + (1^e234) - (4^e235) - (4^e345) - (5^e1234) - (4^e1235) - (2^e1245) - (5^e2345) - (4^e12345)\n",
-            "CPU times: user 4.43 ms, sys: 279 µs, total: 4.71 ms\n",
-            "Wall time: 8.54 ms\n"
+            "U = -(2^e1) - (4^e2) + (1^e3) - (1^e4) - (1^e5) + (3^e12) - (1^e13) + (3^e14) - (1^e15) + (1^e23) - (4^e24) - (3^e25) - (2^e34) - (2^e35) - (4^e45) - (3^e123) + (5^e124) - (4^e125) + (5^e134) + (1^e135) - (3^e145) + (1^e234) + (2^e245) + (2^e345) + (2^e1234) + (2^e1235) - (2^e1245) + (2^e1345) - (2^e2345) - (2^e12345)\n",
+            "CPU times: user 4.27 ms, sys: 0 ns, total: 4.27 ms\n",
+            "Wall time: 4.86 ms\n"
           ]
         }
       ],
@@ -184,29 +174,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nZ9ivUM-P5Ls",
-        "outputId": "48b454ae-008a-45f1-e4fd-196d336bb960"
+        "outputId": "7451b38c-9b79-471c-84aa-6c5a04fc1627"
       },
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/numba/np/ufunc/parallel.py:363: NumbaWarning: The TBB threading layer requires TBB version 2019.5 or later i.e., TBB_INTERFACE_VERSION >= 11005. Found TBB_INTERFACE_VERSION = 9107. The TBB threading layer is disabled.\n",
-            "  warnings.warn(problem)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 2.82 s, sys: 140 ms, total: 2.96 s\n",
-            "Wall time: 4.24 s\n"
+            "CPU times: user 338 ms, sys: 12.3 ms, total: 350 ms\n",
+            "Wall time: 413 ms\n"
           ]
         }
       ],
@@ -234,20 +216,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "I5AR6mICWEfz",
-        "outputId": "6b9ff5c9-4cdd-4917-fffd-879f619f7023"
+        "outputId": "5e096afe-ba22-463b-f98f-401370ff515c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Characteristic polynomial coefficients:  [-16.0, -364.0, -9520.0, -119182.0, -1084464.0, -29322716.0, -10753040.0, -2192269497.0]\n"
+            "Characteristic polynomial coefficients:  [0.0, -468.0, -2576.0, -74662.0, -127008.0, -7273108.0, -4124176.0, -174147201.0]\n"
           ]
         }
       ],
@@ -266,21 +248,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ty9YwG21P5Lv",
-        "outputId": "723ca71f-feca-44c6-f7e8-fdc5a6469f22"
+        "outputId": "20ad01fe-4086-40ad-ccbb-bafb9836466f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 166 µs, sys: 17 µs, total: 183 µs\n",
-            "Wall time: 192 µs\n"
+            "CPU times: user 155 µs, sys: 14 µs, total: 169 µs\n",
+            "Wall time: 177 µs\n"
           ]
         }
       ],
@@ -302,14 +284,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 0
         },
         "id": "tXCFBnpqWcKS",
-        "outputId": "5163b155-8980-4c37-add2-2ce9161660f3"
+        "outputId": "8bab133d-719e-4740-9c67-7e751c8ff646"
       },
       "outputs": [
         {
@@ -323,7 +305,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 22
         }
       ],
       "source": [
@@ -341,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 23,
       "metadata": {
         "id": "Xy5VVGzhqRpz",
         "cellView": "form"
@@ -368,21 +350,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 24,
       "metadata": {
         "id": "lXOqkpXzs-Qp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0bc77089-7b86-4093-f686-9be9991b8efd"
+        "outputId": "64133545-f50c-4697-e152-cdb31aad3c85"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 6 µs, sys: 1 µs, total: 7 µs\n",
-            "Wall time: 11.2 µs\n"
+            "CPU times: user 7 µs, sys: 0 ns, total: 7 µs\n",
+            "Wall time: 11 µs\n"
           ]
         }
       ],
@@ -396,21 +378,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QHZIUJxbsbP3",
-        "outputId": "d6bd3491-f533-4a6f-ee31-648e8baf55ad"
+        "outputId": "935c66b9-2265-40d2-af88-0c02cb15c163"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 1.02 ms, sys: 1 µs, total: 1.03 ms\n",
-            "Wall time: 1.04 ms\n"
+            "CPU times: user 361 µs, sys: 0 ns, total: 361 µs\n",
+            "Wall time: 368 µs\n"
           ]
         }
       ],
@@ -421,11 +403,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "1RHYi6DXuxul"
+        "id": "1RHYi6DXuxul",
+        "outputId": "53670599-4955-4a74-ce1b-6bd4a1ac247d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 21.1 s, sys: 90.3 ms, total: 21.2 s\n",
+            "Wall time: 27.5 s\n"
+          ]
+        }
+      ],
       "source": [
         "%%time\n",
         "c2 = next(coefs_generator)"
@@ -443,9 +438,9 @@
           "height": 56
         },
         "id": "TCrJzDgkhvBV",
-        "outputId": "6d604cc6-01d7-48f6-f1d7-b5265f333f19"
+        "outputId": "1ea81871-fd4b-4174-b6e3-0e431c999f6c"
       },
-      "execution_count": 14,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +470,7 @@
             "text/latex": "$\\displaystyle \\left( 8.0 v,\\right)$"
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 27
         }
       ]
     },
@@ -486,10 +481,59 @@
         "c2,"
       ],
       "metadata": {
-        "id": "Brpc0vqHhr9W"
+        "id": "Brpc0vqHhr9W",
+        "outputId": "cbd828e3-b7ec-4b25-9af6-017b9ff86dfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "C_2:\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/latest.js?config=default'></script>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "⎛        2         2          2           2            2             2        \n",
+              "⎝- 28.0⋅v  + 4.0⋅v¹  - 4.0⋅v¹²  - 4.0⋅v¹²³  + 4.0⋅v¹²³⁴  + 4.0⋅v¹²³⁴⁵  + 4.0⋅v\n",
+              "\n",
+              "    2           2            2           2          2           2            2\n",
+              "¹²³⁵  - 4.0⋅v¹²⁴  + 4.0⋅v¹²⁴⁵  - 4.0⋅v¹²⁵  - 4.0⋅v¹³  - 4.0⋅v¹³⁴  + 4.0⋅v¹³⁴⁵ \n",
+              "\n",
+              "           2          2           2          2         2          2           \n",
+              " - 4.0⋅v¹³⁵  - 4.0⋅v¹⁴  - 4.0⋅v¹⁴⁵  - 4.0⋅v¹⁵  + 4.0⋅v²  - 4.0⋅v²³  - 4.0⋅v²³⁴\n",
+              "\n",
+              "2            2           2          2           2          2         2        \n",
+              "  + 4.0⋅v²³⁴⁵  - 4.0⋅v²³⁵  - 4.0⋅v²⁴  - 4.0⋅v²⁴⁵  - 4.0⋅v²⁵  + 4.0⋅v³  - 4.0⋅v\n",
+              "\n",
+              "  2           2          2         2          2         2 ⎞\n",
+              "³⁴  - 4.0⋅v³⁴⁵  - 4.0⋅v³⁵  + 4.0⋅v⁴  - 4.0⋅v⁴⁵  + 4.0⋅v⁵ ,⎠"
+            ],
+            "text/latex": "$\\displaystyle \\left( - 28.0 v^{2} + 4.0 \\left(v^{1}\\right)^{2} - 4.0 \\left(v^{12}\\right)^{2} - 4.0 \\left(v^{123}\\right)^{2} + 4.0 \\left(v^{1234}\\right)^{2} + 4.0 \\left(v^{12345}\\right)^{2} + 4.0 \\left(v^{1235}\\right)^{2} - 4.0 \\left(v^{124}\\right)^{2} + 4.0 \\left(v^{1245}\\right)^{2} - 4.0 \\left(v^{125}\\right)^{2} - 4.0 \\left(v^{13}\\right)^{2} - 4.0 \\left(v^{134}\\right)^{2} + 4.0 \\left(v^{1345}\\right)^{2} - 4.0 \\left(v^{135}\\right)^{2} - 4.0 \\left(v^{14}\\right)^{2} - 4.0 \\left(v^{145}\\right)^{2} - 4.0 \\left(v^{15}\\right)^{2} + 4.0 \\left(v^{2}\\right)^{2} - 4.0 \\left(v^{23}\\right)^{2} - 4.0 \\left(v^{234}\\right)^{2} + 4.0 \\left(v^{2345}\\right)^{2} - 4.0 \\left(v^{235}\\right)^{2} - 4.0 \\left(v^{24}\\right)^{2} - 4.0 \\left(v^{245}\\right)^{2} - 4.0 \\left(v^{25}\\right)^{2} + 4.0 \\left(v^{3}\\right)^{2} - 4.0 \\left(v^{34}\\right)^{2} - 4.0 \\left(v^{345}\\right)^{2} - 4.0 \\left(v^{35}\\right)^{2} + 4.0 \\left(v^{4}\\right)^{2} - 4.0 \\left(v^{45}\\right)^{2} + 4.0 \\left(v^{5}\\right)^{2},\\right)$"
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     }
   ],
   "metadata": {
